# rabitq-turboquant-comparison

./: .gitignore  .gitmodules  README.md
accuracy/: README.md  RESULTS.md  draw_rabitq.py  draw_turbo.py  get_dataset.py  prepare_dataset.py  rabitq.cpp  turbo_quant.py
ann/: CMakeLists.txt  README.md  RESULTS.md  common.py  plot_recall_figure.py  prepare_all_datasets.py  prepare_glove200.py  prepare_openai_dbpedia.py  rabitq.cpp  requirements.txt  run_all_experiments.py  run_rabitq_recall.py  run_turboquant_recall.py
docs/: algorithms.md  kv_cache_results.md  theoretical_guarantees.md  turbo_bugs.md
efficiency/: README.md  RESULTS.md  get_dataset.py  prepare_glove200.py
efficiency/cpu/: README.md  prepare_dataset.py  rabitq.cpp
efficiency/gpu/: README.md  turbo_quant.py
efficiency/gpu/RaBitQ-GPU/: .gitignore  CMakeLists.txt  README.md
efficiency/gpu/RaBitQ-GPU/include/: defines.hpp
efficiency/gpu/RaBitQ-GPU/include/quantizer/: fht_cuda.cuh  quantizer_standalone.cuh  rescale_search_gpu.cuh  rotator_gpu.cuh  tight_start_constants.cuh
efficiency/gpu/RaBitQ-GPU/include/utils/: IO.hpp  utils_cuda.cuh
efficiency/gpu/RaBitQ-GPU/src/quantizer/: quantizer_standalone.cu  rescale_search_gpu.cu  rotator_gpu.cu
efficiency/gpu/RaBitQ-GPU/tests/: test_quantizer_standalone.cu
